--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
   <main>
   <img src="assets/images/image-omelette.jpeg">
-  <h1>Simple Omelette Recipe</h1>
+  <div class="content">
+    <h1>Simple Omelette Recipe</h1>
 
   <p>
     An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
@@ -95,6 +96,8 @@
       <th>  22g</th>
     </tr>
   </table>
+  </div>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
