--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <main>
-  <img src="assets/images/image-omelette.jpeg">
+  <img src="assets/images/image-omelette.jpeg" alt="post-photo">
   <div class="content">
     <h1>Simple Omelette Recipe</h1>
 
@@ -32,7 +32,7 @@
   </p>
 
   <div class="rose">
-    <h3 class="raspberry">Preparation time</h3>
+    <h2 class="raspberry">Preparation time</h>
       <ul>
         <li> <b>Total</b>: Approximately 10 minutes</li>
         <li> <b>Preparation</b>: 5 minutes</li>
